tests/invalid/bad_bit_imm.s
_start:
  and r0, r0, 0xAAAAAAA